print RAILS_ENV

--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1 class="header">Fancy Art Gallery</h1>
+<h1 class="header">Super Fancy Art Gallery</h1>
 
 
 
@@ -45,6 +45,7 @@
 
 <div>
 <br/>
-Hostname: <%= @hostname %>
+Hostname: <%= @hostname %><br/>
+RAILS_ENV: <%= ENV['RAILS_ENV'] %>
 </div>
 
