additional debug info for database

--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -46,6 +46,7 @@
 <div>
 <br/>
 Hostname: <%= @hostname %><br/>
-RAILS_ENV: <%= ENV['RAILS_ENV'] %>
+RAILS_ENV: <%= ENV['RAILS_ENV'] %><br/>
+Database Adapter: <%= @database_adapter %>
 </div>
 
