change for pipeline

--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1 class="header">Copilot Art Gallery</h1>
+<h1 class="header">Copilot Take 2 Art Gallery</h1>
 
 
 
