--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1 class="header">Trigger a change in CodeBuild</h1>
+<h1 class="header">My Art Gallery</h1>
 
 
 
