--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-<h1 class="header">My Art Gallery CodeDeploy</h1>
+<h1 class="header">My Art Gallery</h1>
+<h2>Hello ECR Codebuild</h2>
 
 
 
