--- a/app/views/arts/edit.html.erb
+++ b/app/views/arts/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this art", @art %> |
-  <%= link_to "Back to arts", arts_path %>
+  <%= link_to "Show this piece", @art %> |
+  <%= link_to "Back to gallery", arts_path %>
 </div>
