--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1 class="header">My Art Gallery</h1>
-<h2>Hello ECR Codebuild</h2>
+<h2>Hello from ECS CodePipeline!</h2>
 
 
 
